--- a/html/_/index.html
+++ b/html/_/index.html
@@ -780,7 +780,7 @@ crossorigin=""/>
                         </span>
                       </h2>
                       <br>
-                        <table class="tableannexeI49th">
+                        <table class="tableannexeI49th" id="tableannexeI49th">
                           <caption class="caption mb-0"> <span lang="fr">Dose maximale autorisée en fonction de la catégorie de l'ingrédient :</span><span lang="en">Maximum usage according to the product category :</span></caption>
                           <!-- EN-TETE DU TABLEAU-->
                               <thead>
