--- a/html/_/index.html
+++ b/html/_/index.html
@@ -662,7 +662,7 @@ crossorigin=""/>
                         </span>
                       </h2>
                       <br>
-                        <table class="tableannexeI">
+                        <table class="49THtableannexeI" id="49THtableannexeI">
                           <caption class="caption mb-0"> <span lang="fr">Dose maximale autorisée en fonction de la catégorie de l'ingrédient :</span><span lang="en">Maximum usage according to the product category :</span></caption>
                           <!-- EN-TETE DU TABLEAU-->
                               <thead>
@@ -679,11 +679,7 @@ crossorigin=""/>
                                   <td>Estimated Concentration</td>
                                 </tr>
                               <tbody>
-                                <tr>
-                                  <td></td>
-                                  <td></td>
-                                  <td></td>
-                                </tr>
+                                
                               </tbody>
                         </table>
                       </p>
