--- a/html/_/IFRA.html
+++ b/html/_/IFRA.html
@@ -5,7 +5,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-<link rel="canonical" href="https://www.scentree.co/_/IFRA.html" />
+<link rel="canonical" href="https://www.scentree.co/_/allergenes.html" />
 <!--ADD FAVICON -->
 <link rel="icon" type="image/png" href="../img/logotfav.png" />
 <!-- Titre de la page -->   
@@ -198,22 +198,41 @@ crossorigin=""/>
     <span lang="fr">En savoir plus sur les standards : </span>
     <span lang="en">Improve your knowledge around standard</span>
   </h2>
+
 <p>
 	<span lang="fr">Les standards de l’IFRA peuvent être de 3 types : </span>
 	<span lang="en">3 types of standards are distinguished : </span>
 
-	<ol class="ingredientnat" type="A">
-		<li class="catégories">
+	<ol class="ingredientnat" type="1">
+
+		<li class="catégories2">
 			<span lang="fr">Standard Restrictif : </span>
 			<span lang="en">Restrictive Standards : </span>
 		</li>
 		<span lang="fr">Ce type de standard définit des concentrations limites à ne pas dépasser dans un produit fini. Ces concentrations dépendent majoritairement du type de produit fini, comme nous le verrons dans le point suivant. </span>
 		<span lang="en">This type of standards defines limits of use for some ingredients, not to overpass in the finished product. These concentrations mostly depend on the type of finished product.</span>
+
+		<li class="catégories2">
+			<span lang="fr">Standard Prohibitif : </span>
+			<span lang="en">Prohibitive Standards : </span>
+		</li>
+		<span lang="fr">Ce type de standard interdit l’utilisation d’un produit car le cadre d’une composition parfumée. A ce jour, prêt de 66 ingrédients ou groupes d’ingrédients interdits. </span>
+		<span lang="en">This type of standard prohibits the use of an ingredient in a perfume product. Today, 66 ingredients or groups of ingredients are prohibited.</span>
+
+		<li class="catégories2">
+			<span lang="fr">Standard Spécificatif :  </span>
+			<span lang="en">Specificative Standards :  </span>
+		</li>
+		<span lang="fr">Ce type de standard apporte des précisions sur la qualité (pureté, processus d’extraction ou de production etc etc)</span>
+		<span lang="en">This type of standard gives precisions over quality (purity, extraction or production process etc.)</span>
 	</ol>
+	
+	<span lang="fr">Les standards de l’IFRA peuvent être de 3 types : </span>
+	<span lang="en">3 types of standards are distinguished : </span>
 </p>
 <p>
-	<span lang="fr"></span>
-	<span lang="en"></span>
+	<span lang="fr">A noter que tous les produits de consommation parfumés entrent dans le champ d'application des normes IFRA, à l'exception des produits qui ne sont manifestement pas couverts par les évaluations de sécurité RIFM, tels que les dispositifs médicaux, les médicaments prescrits, les applications de l'aromathérapie ou encore les produits de consommation utilisés dans le cadre professionnel (par exemple, les shampoings appliqués dans les salons de coiffure, les désinfectants pour les mains appliqués dans les hôpitaux, etc.)</span>
+	<span lang="en">It is to be notes that every single type of perfumed products is registered by the IFRA, except some of them that are not covered by the RIFM safety assessments, as medical products, prescribed medication, aromatherapy application or products used in a professional environment (for example, shampoos to the hairdressers, hand disinfectants applied at hospitals, etc.)</span>
 </p>
 
 </div>
