--- a/html/_/IFRA.html
+++ b/html/_/IFRA.html
@@ -227,8 +227,10 @@ crossorigin=""/>
 		<span lang="en">This type of standard gives precisions over quality (purity, extraction or production process etc.)</span>
 	</ol>
 
+	<p class="m-0 p-0">
 	<span lang="fr">A noter que tous les produits de consommation parfumés entrent dans le champ d'application des normes IFRA, à l'exception des produits qui ne sont manifestement pas couverts par les évaluations de sécurité RIFM, tels que les dispositifs médicaux, les médicaments prescrits, les applications de l'aromathérapie ou encore les produits de consommation utilisés dans le cadre professionnel (par exemple, les shampoings appliqués dans les salons de coiffure, les désinfectants pour les mains appliqués dans les hôpitaux, etc.)</span>
 	<span lang="en">It is to be notes that every single type of perfumed products is registered by the IFRA, except some of them that are not covered by the RIFM safety assessments, as medical products, prescribed medication, aromatherapy application or products used in a professional environment (for example, shampoos to the hairdressers, hand disinfectants applied at hospitals, etc.)</span>
+	</p>
 </p>
 
 </div>
