--- a/html/_/IFRA.html
+++ b/html/_/IFRA.html
@@ -233,6 +233,18 @@ crossorigin=""/>
 	</p>
 </p>
 
+	 <h2 class="sous_titre">
+	    <span lang="fr">Qu’elles sont les nouveautés de l’amendement 49th ? </span>
+	    <span lang="en">What is new about the 49th amendment ? </span>
+	  </h2>
+	<p>
+		<span lang="fr">Les principales nouveautés de cet amendement par rapport au précédent concernent l'introduction de plusieurs <b class="bplus">améliorations de la méthodologie d'évaluation des risques</b>. (Révision de la méthodologie de l'<b>évaluation quantitative des risques</b> pour les ingrédients de parfumerie – QRA2). Cette amélioration s’appuie sur une nouvelle façon d'évaluer la toxicité systémique basée sur un modèle d'exposition globale. </span>
+		<span lang="en">The main news from this amendment, compared to the previous one are concerning many <b class="bplus">improvements of the risk assessment methodology</b> : modification of the <b>quantitative risk assessment</b> methodology for perfume ingredients – QRA2 (Quantitative Risk Assessment). This improvement concerns a new method for evaluating the systemic toxicity, based on global exposure to an ingredient.</span>
+	</p>
+	<p class="exemple">
+		<span lang="fr">Pour plus de détails sur ce point, veuillez consulter le site web de l'IDEA (<a class="interpop" href="http://ideaproject.info/" target="_blank">http://ideaproject.info/</a> ) et les publications concernant le QRA2 (<a class="interpop" href="www.fragrancematerialsafetyresource.elsevier.com/" target="_blank">www.fragrancematerialsafetyresource.elsevier.com/</a>).</span>
+		<span lang="en"></span>
+	</p>
 </div>
 
 </div>
