--- a/html/_/IFRA.html
+++ b/html/_/IFRA.html
@@ -233,10 +233,11 @@ crossorigin=""/>
 	</p>
 </p>
 
-	 <h2 class="sous_titre">
-	    <span lang="fr">Qu’elles sont les nouveautés de l’amendement 49th ? </span>
-	    <span lang="en">What is new about the 49th amendment ? </span>
-	  </h2>
+<h2 class="sous_titre">
+    <span lang="fr">Qu’elles sont les nouveautés de l’amendement 49th ? </span>
+    <span lang="en">What is new about the 49th amendment ? </span>
+</h2>
+
 	<p>
 		<span lang="fr">Les principales nouveautés de cet amendement par rapport au précédent concernent l'introduction de plusieurs <b class="bplus">améliorations de la méthodologie d'évaluation des risques</b>. (Révision de la méthodologie de l'<b>évaluation quantitative des risques</b> pour les ingrédients de parfumerie – QRA2). Cette amélioration s’appuie sur une nouvelle façon d'évaluer la toxicité systémique basée sur un modèle d'exposition globale. </span>
 		<span lang="en">The main news from this amendment, compared to the previous one are concerning many <b class="bplus">improvements of the risk assessment methodology</b> : modification of the <b>quantitative risk assessment</b> methodology for perfume ingredients – QRA2 (Quantitative Risk Assessment). This improvement concerns a new method for evaluating the systemic toxicity, based on global exposure to an ingredient.</span>
@@ -245,6 +246,21 @@ crossorigin=""/>
 		<span lang="fr">Pour plus de détails sur ce point, veuillez consulter le site web de l'IDEA (<a class="interpop" href="http://ideaproject.info/" target="_blank">http://ideaproject.info/</a> ) et les publications concernant le QRA2 (<a class="interpop" href="www.fragrancematerialsafetyresource.elsevier.com/" target="_blank">www.fragrancematerialsafetyresource.elsevier.com/</a>).</span>
 		<span lang="en"></span>
 	</p>
+<p>
+	<span lang="fr">Cela a donc eu pour conséquence : </span>
+	<span lang="en">As a consequence : </span>
+	
+	<ol class="catégories2">
+		<li>
+			<span lang="fr">L'établissement de catégories différentes par rapport au QRA1 (48th). Ainsi, toutes les normes, nouvelles et existantes, comprennent maintenant 12 catégories EQR2 au lieu de 11 auparavant.</span>
+			<span lang="en">Different product categories were established, regarding the QRA1 (48th amendment). Then, every new or existing standards are mentioning 12 QRA2 categories, instead of 11.</span>
+		</li>
+		<li>
+			<span lang="fr">[POINT NON TRADUIT EN FR]</span>
+			<span lang="en">In the new amendment, categories previously based on an ingredient’s systemic toxicity have been renewed, this time according to combined exposures. Previous categories (QRA1) have been harmonized with the new ones (QRA2). Moreover, new concentration limits have been tested with the previous methodology, using systemic toxicity. Eventually, the limit of use defined in the 49th amendment corresponds to the weakest concentration obtained for one assessment, and the other.</span>
+		</li>
+	</ol>
+</p>
 </div>
 
 </div>
