--- a/html/_/IFRA.html
+++ b/html/_/IFRA.html
@@ -176,67 +176,66 @@ crossorigin=""/>
 
 <div class="col-12 pagederoulante text-justify scrollbarblockgauche"> 
 
-  <h2 class="sous_titre mt-3">
-    <span lang="fr">Qu’est-ce que l’IFRA et quel est son rôle ?</span>
-    <span lang="en">What is the IFRA and what is its aim ?</span>
-  </h2>
+	<h2 class="sous_titre mt-3">
+		<span lang="fr">Qu’est-ce que l’IFRA et quel est son rôle ?</span>
+	    <span lang="en">What is the IFRA and what is its aim ?</span>
+	</h2>
 
-<p>
-	<span lang="fr">Crée en 1973 l’IFRA (<a class="interpop" href="https://ifrafragrance.org/" target="_BLANK">International Fragrance Association</a>) a pour objectif principal de <b>représenter les intérêts et la voix de l’industrie des parfums à travers le monde</b>. Ainsi, au niveau mondial, cette organisation promeut la sécurité et les avantages des produits de l'industrie des parfums par le biais d'un dialogue entre les différentes parties prenantes de l’industrie.</span>
-	<span lang="en">Created in 1973, the IFRA (<a class="interpop" href="https://ifrafragrance.org/" target="_BLANK">International Fragrance Association</a>) wants to represent the interests and the voice of the perfume industry throughout the world. Then, this organization promotes perfume products security and advantages on a global scale, by making the link between the different entities of the perfume industry.</span>
-</p>
-<p>
-	<span lang="fr">L’IFRA travaille en lien avec l’RIFM (Research Institute for Fragrance Materials) afin de garantir la sécurité des produits de l’industrie. En effet, lorsqu’à la suite de nombreuses études, l’RIFM déclare qu’un ingrédient est susceptible d’être dangereux pour l’Homme, l’IFRA édite un <b class="bplus">standard</b> pour cet ingrédient. Ce standard sera publié au sein d’un <b class="bplus">amendement</b>.</span>
-	<span lang="en">The IFRA works closely to the RIFM (Research Institute for Fragrance Materials) to guarantee safe perfume products. In fact, after numerous studies, if the RIFM declares that one ingredient may be dangerous if used, the IFRA is editing a <b class="bplus">standard</b> for this ingredient. This standard will be published in an <b class="bplus">amendment</b>.</span>
-</p>
-<p>
-	<span lang="fr">A ce jour, nous sommes dans une <b>année de transition entre le 48th et le 49th amendement</b> (c’est pour cette raison que les ingrédients réglementés de ScenTree possèdent 2 onglets dans leur partie « IFRA »). A travers ces évolutions, c'est l'intégralité de l'industrie de la parfumerie qui doit donc s'adapter afin de <b>garantir toujours plus de sécurité à ses consommateurs</b>. </span>
-	<span lang="en">Today, the <b>transition between the 48th and the 49th amendements is being made</b> (this is why regulated ingredients found on ScenTree have two tabs, for each amendement). This means that regulation is evolving throughout the years, and perfumes on <b>the market have to adapt…</b></span>
-</p>
-	
-  <h2 class="sous_titre">
-    <span lang="fr">En savoir plus sur les standards : </span>
-    <span lang="en">Improve your knowledge around standard</span>
-  </h2>
-
-<p>
-	<span lang="fr">Les standards de l’IFRA peuvent être de 3 types : </span>
-	<span lang="en">3 types of standards are distinguished : </span>
-
-	<ol class="ingredientnat" type="1">
-
-		<li class="catégories2">
-			<span lang="fr">Standard Restrictif : </span>
-			<span lang="en">Restrictive Standards : </span>
-		</li>
-		<span lang="fr">Ce type de standard définit des concentrations limites à ne pas dépasser dans un produit fini. Ces concentrations dépendent majoritairement du type de produit fini, comme nous le verrons dans le point suivant. </span>
-		<span lang="en">This type of standards defines limits of use for some ingredients, not to overpass in the finished product. These concentrations mostly depend on the type of finished product.</span>
-
-		<li class="catégories2">
-			<span lang="fr">Standard Prohibitif : </span>
-			<span lang="en">Prohibitive Standards : </span>
-		</li>
-		<span lang="fr">Ce type de standard interdit l’utilisation d’un produit car le cadre d’une composition parfumée. A ce jour, prêt de 66 ingrédients ou groupes d’ingrédients interdits. </span>
-		<span lang="en">This type of standard prohibits the use of an ingredient in a perfume product. Today, 66 ingredients or groups of ingredients are prohibited.</span>
-
-		<li class="catégories2">
-			<span lang="fr">Standard Spécificatif :  </span>
-			<span lang="en">Specificative Standards :  </span>
-		</li>
-		<span lang="fr">Ce type de standard apporte des précisions sur la qualité (pureté, processus d’extraction ou de production etc etc)</span>
-		<span lang="en">This type of standard gives precisions over quality (purity, extraction or production process etc.)</span>
-	</ol>
-
-	<p class="m-0 p-0">
-	<span lang="fr">A noter que tous les produits de consommation parfumés entrent dans le champ d'application des normes IFRA, à l'exception des produits qui ne sont manifestement pas couverts par les évaluations de sécurité RIFM, tels que les dispositifs médicaux, les médicaments prescrits, les applications de l'aromathérapie ou encore les produits de consommation utilisés dans le cadre professionnel (par exemple, les shampoings appliqués dans les salons de coiffure, les désinfectants pour les mains appliqués dans les hôpitaux, etc.)</span>
-	<span lang="en">It is to be notes that every single type of perfumed products is registered by the IFRA, except some of them that are not covered by the RIFM safety assessments, as medical products, prescribed medication, aromatherapy application or products used in a professional environment (for example, shampoos to the hairdressers, hand disinfectants applied at hospitals, etc.)</span>
+	<p>
+		<span lang="fr">Crée en 1973 l’IFRA (<a class="interpop" href="https://ifrafragrance.org/" target="_BLANK">International Fragrance Association</a>) a pour objectif principal de <b>représenter les intérêts et la voix de l’industrie des parfums à travers le monde</b>. Ainsi, au niveau mondial, cette organisation promeut la sécurité et les avantages des produits de l'industrie des parfums par le biais d'un dialogue entre les différentes parties prenantes de l’industrie.</span>
+		<span lang="en">Created in 1973, the IFRA (<a class="interpop" href="https://ifrafragrance.org/" target="_BLANK">International Fragrance Association</a>) wants to represent the interests and the voice of the perfume industry throughout the world. Then, this organization promotes perfume products security and advantages on a global scale, by making the link between the different entities of the perfume industry.</span>
 	</p>
-</p>
+	<p>
+		<span lang="fr">L’IFRA travaille en lien avec l’RIFM (Research Institute for Fragrance Materials) afin de garantir la sécurité des produits de l’industrie. En effet, lorsqu’à la suite de nombreuses études, l’RIFM déclare qu’un ingrédient est susceptible d’être dangereux pour l’Homme, l’IFRA édite un <b class="bplus">standard</b> pour cet ingrédient. Ce standard sera publié au sein d’un <b class="bplus">amendement</b>.</span>
+		<span lang="en">The IFRA works closely to the RIFM (Research Institute for Fragrance Materials) to guarantee safe perfume products. In fact, after numerous studies, if the RIFM declares that one ingredient may be dangerous if used, the IFRA is editing a <b class="bplus">standard</b> for this ingredient. This standard will be published in an <b class="bplus">amendment</b>.</span>
+	</p>
+	<p>
+		<span lang="fr">A ce jour, nous sommes dans une <b>année de transition entre le 48th et le 49th amendement</b> (c’est pour cette raison que les ingrédients réglementés de ScenTree possèdent 2 onglets dans leur partie « IFRA »). A travers ces évolutions, c'est l'intégralité de l'industrie de la parfumerie qui doit donc s'adapter afin de <b>garantir toujours plus de sécurité à ses consommateurs</b>. </span>
+		<span lang="en">Today, the <b>transition between the 48th and the 49th amendements is being made</b> (this is why regulated ingredients found on ScenTree have two tabs, for each amendement). This means that regulation is evolving throughout the years, and perfumes on <b>the market have to adapt…</b></span>
+	</p>
+		
+	<h2 class="sous_titre">
+	    <span lang="fr">En savoir plus sur les standards : </span>
+	    <span lang="en">Improve your knowledge around standard</span>
+	</h2>
 
-<h2 class="sous_titre">
-    <span lang="fr">Qu’elles sont les nouveautés de l’amendement 49th ? </span>
-    <span lang="en">What is new about the 49th amendment ? </span>
-</h2>
+	<p>
+		<span lang="fr">Les standards de l’IFRA peuvent être de 3 types : </span>
+		<span lang="en">3 types of standards are distinguished : </span>
+
+		<ol class="ingredientnat" type="1">
+			<li class="catégories2">
+				<span lang="fr">Standard Restrictif : </span>
+				<span lang="en">Restrictive Standards : </span>
+			</li>
+			<span lang="fr">Ce type de standard définit des concentrations limites à ne pas dépasser dans un produit fini. Ces concentrations dépendent majoritairement du type de produit fini, comme nous le verrons dans le point suivant. </span>
+			<span lang="en">This type of standards defines limits of use for some ingredients, not to overpass in the finished product. These concentrations mostly depend on the type of finished product.</span>
+
+			<li class="catégories2">
+				<span lang="fr">Standard Prohibitif : </span>
+				<span lang="en">Prohibitive Standards : </span>
+			</li>
+			<span lang="fr">Ce type de standard interdit l’utilisation d’un produit car le cadre d’une composition parfumée. A ce jour, prêt de 66 ingrédients ou groupes d’ingrédients interdits. </span>
+			<span lang="en">This type of standard prohibits the use of an ingredient in a perfume product. Today, 66 ingredients or groups of ingredients are prohibited.</span>
+
+			<li class="catégories2">
+				<span lang="fr">Standard Spécificatif :  </span>
+				<span lang="en">Specificative Standards :  </span>
+			</li>
+			<span lang="fr">Ce type de standard apporte des précisions sur la qualité (pureté, processus d’extraction ou de production etc etc)</span>
+			<span lang="en">This type of standard gives precisions over quality (purity, extraction or production process etc.)</span>
+		</ol>
+
+		<p class="m-0 p-0">
+			<span lang="fr">A noter que tous les produits de consommation parfumés entrent dans le champ d'application des normes IFRA, à l'exception des produits qui ne sont manifestement pas couverts par les évaluations de sécurité RIFM, tels que les dispositifs médicaux, les médicaments prescrits, les applications de l'aromathérapie ou encore les produits de consommation utilisés dans le cadre professionnel (par exemple, les shampoings appliqués dans les salons de coiffure, les désinfectants pour les mains appliqués dans les hôpitaux, etc.)</span>
+			<span lang="en">It is to be notes that every single type of perfumed products is registered by the IFRA, except some of them that are not covered by the RIFM safety assessments, as medical products, prescribed medication, aromatherapy application or products used in a professional environment (for example, shampoos to the hairdressers, hand disinfectants applied at hospitals, etc.)</span>
+		</p>
+	</p>
+
+	<h2 class="sous_titre">
+	    <span lang="fr">Qu’elles sont les nouveautés de l’amendement 49th ? </span>
+	    <span lang="en">What is new about the 49th amendment ? </span>
+	</h2>
 
 	<p>
 		<span lang="fr">Les principales nouveautés de cet amendement par rapport au précédent concernent l'introduction de plusieurs <b class="bplus">améliorations de la méthodologie d'évaluation des risques</b>. (Révision de la méthodologie de l'<b>évaluation quantitative des risques</b> pour les ingrédients de parfumerie – QRA2). Cette amélioration s’appuie sur une nouvelle façon d'évaluer la toxicité systémique basée sur un modèle d'exposition globale. </span>
@@ -244,24 +243,39 @@ crossorigin=""/>
 	</p>
 	<p class="exemple">
 		<span lang="fr">Pour plus de détails sur ce point, veuillez consulter le site web de l'IDEA (<a class="interpop" href="http://ideaproject.info/" target="_blank">http://ideaproject.info/</a> ) et les publications concernant le QRA2 (<a class="interpop" href="www.fragrancematerialsafetyresource.elsevier.com/" target="_blank">www.fragrancematerialsafetyresource.elsevier.com/</a>).</span>
-		<span lang="en"></span>
+		<span lang="en">For more details, please go on the IDEA website (<a class="interpop" href="http://ideaproject.info/" target="_blank">http://ideaproject.info/</a>) and read publications concerning the QRA2 (<a class="interpop" href="www.fragrancematerialsafetyresource.elsevier.com/" target="_blank">www.fragrancematerialsafetyresource.elsevier.com/</a>).</span>
 	</p>
-<p>
-	<span lang="fr">Cela a donc eu pour conséquence : </span>
-	<span lang="en">As a consequence : </span>
-	
-	<ol class="catégories2">
-		<li>
-			<span lang="fr">L'établissement de catégories différentes par rapport au QRA1 (48th). Ainsi, toutes les normes, nouvelles et existantes, comprennent maintenant 12 catégories EQR2 au lieu de 11 auparavant.</span>
-			<span lang="en">Different product categories were established, regarding the QRA1 (48th amendment). Then, every new or existing standards are mentioning 12 QRA2 categories, instead of 11.</span>
-		</li>
-		<li>
-			<span lang="fr">[POINT NON TRADUIT EN FR]</span>
-			<span lang="en">In the new amendment, categories previously based on an ingredient’s systemic toxicity have been renewed, this time according to combined exposures. Previous categories (QRA1) have been harmonized with the new ones (QRA2). Moreover, new concentration limits have been tested with the previous methodology, using systemic toxicity. Eventually, the limit of use defined in the 49th amendment corresponds to the weakest concentration obtained for one assessment, and the other.</span>
-		</li>
-	</ol>
-</p>
-</div>
+	<p>
+		<span lang="fr">Cela a donc eu pour conséquence : </span>
+		<span lang="en">As a consequence : </span>
+		
+		<ol class="ingredientnat">
+			<li>
+				<span lang="fr">L'établissement de catégories différentes par rapport au QRA1 (48th). Ainsi, toutes les normes, nouvelles et existantes, comprennent maintenant 12 catégories EQR2 au lieu de 11 auparavant.</span>
+				<span lang="en">Different product categories were established, regarding the QRA1 (48th amendment). Then, every new or existing standards are mentioning 12 QRA2 categories, instead of 11.</span>
+			</li>
+			<br>
+			<li>
+				<span lang="fr">[POINT NON TRADUIT EN FR]</span>
+				<span lang="en">In the new amendment, categories previously based on an ingredient’s systemic toxicity have been renewed, this time according to combined exposures. Previous categories (QRA1) have been harmonized with the new ones (QRA2). Moreover, new concentration limits have been tested with the previous methodology, using systemic toxicity. Eventually, the limit of use defined in the 49th amendment corresponds to the weakest concentration obtained for one assessment, and the other.</span>
+			</li>
+		</ol>
+	</p>
+	<p> 
+		INSERER ICI LA TABLE DES CATEGORIES 
+	</p>
+	<p>
+		<span lang="fr">Pour en savoir d’avantage sur les spécificités de chacunes de ces categories, nous vous invitons à vous référer aux <a class="interpop" href="https://ifrafragrance.org/docs/default-source/ifra-code-of-practice-and-standards/49th-amendment/ifra-49th-amendment-(att-01)---guidance-for-the-use-of-ifra-standards.pdf?sfvrsn=f83d57c7_3 " target="_blank">Guidance for the use of Ifra Standard</a></span>
+		<span lang="en">To get to know more about these categories, please refer to the <a class="interpop" href="https://ifrafragrance.org/docs/default-source/ifra-code-of-practice-and-standards/49th-amendment/ifra-49th-amendment-(att-01)---guidance-for-the-use-of-ifra-standards.pdf?sfvrsn=f83d57c7_3 " target="_blank">Guidance for the use of IFRA Standards</a></span>
+	</p>
+
+
+
+
+
+
+
+</div><!--Fin scroll-->
 
 </div>
 
