--- a/html/_/IFRA.html
+++ b/html/_/IFRA.html
@@ -242,8 +242,8 @@ crossorigin=""/>
 		<span lang="en">The main news from this amendment, compared to the previous one are concerning many <b class="bplus">improvements of the risk assessment methodology</b> : modification of the <b>quantitative risk assessment</b> methodology for perfume ingredients – QRA2 (Quantitative Risk Assessment). This improvement concerns a new method for evaluating the systemic toxicity, based on global exposure to an ingredient.</span>
 	</p>
 	<p class="exemple">
-		<span lang="fr">Pour plus de détails sur ce point, veuillez consulter le site web de l'IDEA (<a class="interpop" href="http://ideaproject.info/" target="_blank">http://ideaproject.info/</a> ) et les publications concernant le QRA2 (<a class="interpop" href="www.fragrancematerialsafetyresource.elsevier.com/" target="_blank">www.fragrancematerialsafetyresource.elsevier.com/</a>).</span>
-		<span lang="en">For more details, please go on the IDEA website (<a class="interpop" href="http://ideaproject.info/" target="_blank">http://ideaproject.info/</a>) and read publications concerning the QRA2 (<a class="interpop" href="www.fragrancematerialsafetyresource.elsevier.com/" target="_blank">www.fragrancematerialsafetyresource.elsevier.com/</a>).</span>
+		<span lang="fr">Pour plus de détails sur ce point, veuillez consulter le site web de l'IDEA (<a class="interpop" href="http://ideaproject.info/" target="_blank">http://ideaproject.info/</a> ) et les publications concernant le QRA2 (www.fragrancematerialsafetyresource.elsevier.com/).</span>
+		<span lang="en">For more details, please go on the IDEA website (<a class="interpop" href="http://ideaproject.info/" target="_blank">http://ideaproject.info/</a>) and read publications concerning the QRA2 (www.fragrancematerialsafetyresource.elsevier.com/).</span>
 	</p>
 	<p>
 		<span lang="fr">Cela a donc eu pour conséquence : </span>
@@ -268,11 +268,18 @@ crossorigin=""/>
 		<span lang="fr">Pour en savoir d’avantage sur les spécificités de chacunes de ces categories, nous vous invitons à vous référer aux <a class="interpop" href="https://ifrafragrance.org/docs/default-source/ifra-code-of-practice-and-standards/49th-amendment/ifra-49th-amendment-(att-01)---guidance-for-the-use-of-ifra-standards.pdf?sfvrsn=f83d57c7_3 " target="_blank">Guidance for the use of Ifra Standard</a></span>
 		<span lang="en">To get to know more about these categories, please refer to the <a class="interpop" href="https://ifrafragrance.org/docs/default-source/ifra-code-of-practice-and-standards/49th-amendment/ifra-49th-amendment-(att-01)---guidance-for-the-use-of-ifra-standards.pdf?sfvrsn=f83d57c7_3 " target="_blank">Guidance for the use of IFRA Standards</a></span>
 	</p>
-
-
-
-
-
+	<p>
+		<span lang="fr">Afin que l’ensemble de l’industrie soit en mesure d’assurer la transition avec le nouvel amendement, l’IFRA a également défini une timeline permettant à chacun de travailler sereinement :</span>
+		<span lang="en">So that the industry gets the time to make the transition between the oldest and the newest amendments, the IFRA delivered a time line to able every company to work serenely :</span>
+	</p>
+	<p style="text-align: center;">
+        <img class="resumenat" lang="fr" src="../img/IFRATimeline.png" alt="Calendrier d'implentation du 49ème amendement" title="Calendrier d'implentation du 49ème amendement">
+        <img class="resumenat" lang="en" src="../img/IFRATimeline.png" alt="Timetable for implementation of the 49th amendment" title="Timetable for implementation of the 49th amendment">
+    </p>
+    <p>
+		<span lang="fr">Pour en savoir d'avantage sur l'impact de l'IFRA et sur les changements du 49ème amendement sur vos produits, nous vous invitons à vous rapprocher de votre service réglementaire ou de la société de compositons de vos parfums </span>
+		<span lang="en">To find out more about the impact of IFRA and the changes of the 49th amendment on your products, we invite you to contact your regulatory department or your fragrance creation company.</span>
+	</p>
 
 
 </div><!--Fin scroll-->
