--- a/html/_/IFRA.html
+++ b/html/_/IFRA.html
@@ -273,8 +273,8 @@ crossorigin=""/>
 		<span lang="en">So that the industry gets the time to make the transition between the oldest and the newest amendments, the IFRA delivered a time line to able every company to work serenely :</span>
 	</p>
 	<p style="text-align: center;">
-        <img class="resumenat" lang="fr" src="../img/IFRATimeline.png" alt="Calendrier d'implentation du 49ème amendement" title="Calendrier d'implentation du 49ème amendement">
-        <img class="resumenat" lang="en" src="../img/IFRATimeline.png" alt="Timetable for implementation of the 49th amendment" title="Timetable for implementation of the 49th amendment">
+        <img class="timelineifra" lang="fr" src="../img/IFRATimeline.png" alt="Calendrier d'implentation du 49ème amendement" title="Calendrier d'implentation du 49ème amendement">
+        <img class="timelineifra" lang="en" src="../img/IFRATimeline.png" alt="Timetable for implementation of the 49th amendment" title="Timetable for implementation of the 49th amendment">
     </p>
     <p>
 		<span lang="fr">Pour en savoir d'avantage sur l'impact de l'IFRA et sur les changements du 49ème amendement sur vos produits, nous vous invitons à vous rapprocher de votre service réglementaire ou de la société de compositons de vos parfums </span>
