--- a/html/_/IFRA.html
+++ b/html/_/IFRA.html
@@ -262,7 +262,59 @@ crossorigin=""/>
 		</ol>
 	</p>
 	<p> 
-		INSERER ICI LA TABLE DES CATEGORIES 
+		<table class="col-12 align-items-center" >
+   <caption class="caption"><span lang="fr">Liste des produits finis regroupés par catégories</span><span lang="en">List of finished products grouped by category</span></caption> 
+   <thead>
+        <tr>
+            <th>Catégories</th>
+            <th>Produits Finis</th>
+        </tr>
+   </thead>     
+        <tr>
+            <td><span></span>1</td>
+            <td><span></span>Produit pour les lèvres</td> 
+        </tr>
+        <tr>
+            <td><span></span>2</td>
+            <td><span></span>Déodorants et antoperspirants</td> 
+        </tr>
+        <tr>
+            <td><span></span>3</td>
+            <td><span></span>Produits hydroalcoliques pour peaux rasées (eaux de toilette, parfums, produits pour les yeux, crèmes et baumes pour le visage, tampons)</td> 
+        </tr>
+        <tr>
+            <td><span></span>4</td>
+            <td><span></span>Produits hydroalcoliques pour peaux non rasées (eaux de toilette, papiers parfumés, parfums, aide à la coiffe, sprays pour les cheveux, crèmes, lotions, gels et huiles pour le corps, produits pour les pieds, crèmes parfumantes)</td> 
+        </tr>
+        <tr>
+            <td><span></span>5</td>
+            <td><span></span>Crèmes pour les mains</td> 
+        </tr>
+        <tr>
+            <td><span></span>6</td>
+            <td><span></span>Produits buccodentaires</td> 
+        </tr>
+        <tr>
+            <td><span></span>7</td>
+            <td><span></span>Lingettes intimes, lingettes bébé, insecticides pour la peau</td> 
+        </tr>
+        <tr>
+            <td><span></span>8</td>
+            <td><span></span>Démaquillants, aide à la coiffe sans spray, produits pour les ongles, poudres et talcs</td> 
+        </tr>
+        <tr>
+            <td><span></span>9</td>
+            <td><span></span>Produits rincés (savons liquides, dépilatoires, après-shampoings, shampoings, soins visage, après rasage, mousse à raser, gels douches, produits pour le corps, serviettes hygiéniques, autres aérosols)</td> 
+        </tr>
+        <tr>
+            <td><span></span>10</td>
+            <td><span></span>Produits ménagers (lessives en poudre et liquides, autres détergents, produits de lavage à sec, assouplissants, produits de vaisselle à la main, nettoyant pour sols, shampoings pour animaux, couches, lingettes pour toilettes)</td> 
+        </tr>
+        <tr>
+            <td><span></span>11</td>
+            <td><span></span>Produits sans contact avec la peau (désodorisants, blocs pour toilette, insecticides, baton d'encens, objets en plastique, bougies, essence, peinture, cire pour le sol, produits pour lave-vaisselle, parfums de linge, sachets parfumants, cirage, litiaires, sprays pour animaux, soins textiles, eaux parfumantes pour repassage)</td> 
+        </tr>
+  </table> 
 	</p>
 	<p>
 		<span lang="fr">Pour en savoir d’avantage sur les spécificités de chacunes de ces categories, nous vous invitons à vous référer aux <a class="interpop" href="https://ifrafragrance.org/docs/default-source/ifra-code-of-practice-and-standards/49th-amendment/ifra-49th-amendment-(att-01)---guidance-for-the-use-of-ifra-standards.pdf?sfvrsn=f83d57c7_3 " target="_blank">Guidance for the use of Ifra Standard</a></span>
