--- a/html/_/IFRA.html
+++ b/html/_/IFRA.html
@@ -261,8 +261,8 @@ crossorigin=""/>
 			</li>
 		</ol>
 	</p>
-	<div class="row col-12"> 
-	<table class="col-8 align-items-center" style="text-align: center; align-items: center;">
+	<div class="row col-12" style="text-align: center; align-items: center; font-size: 0.8em"> 
+	<table class="col-8 align-items-center">
    	<caption class="caption"><span lang="fr">Liste des produits finis regroupés par catégories</span><span lang="en">List of finished products grouped by category</span></caption> 
 	   <thead>
 	        <tr>
