--- a/html/_/IFRA.html
+++ b/html/_/IFRA.html
@@ -262,7 +262,7 @@ crossorigin=""/>
 		</ol>
 	</p>
 	<div class="row col-12" style="text-align: center; align-items: center; font-size: 0.8em"> 
-	<table class="col-8 align-items-center">
+	<table class="offset-2 col-8">
    	<caption class="caption"><span lang="fr">Liste des produits finis regroupés par catégories</span><span lang="en">List of finished products grouped by category</span></caption> 
 	   <thead>
 	        <tr>
@@ -271,12 +271,15 @@ crossorigin=""/>
 	        </tr>
 	   </thead>     
         <tr>
-            <td><span></span>1</td>
-            <td><span></span>Produit pour les lèvres</td> 
+            <td>1</td>
+            <td>
+            	<span lang="fr">Produit pour les lèvres</span>
+            	<span lang="en">Products applied to the lips</span>
+            </td> 
         </tr>
         <tr>
             <td><span></span>2</td>
-            <td><span></span>Déodorants et antoperspirants</td> 
+            <td><span></span>Déodorants et antiperspirants</td> 
         </tr>
         <tr>
             <td><span></span>3</td>
